[workspace]
authors = ["Aditya Raj Singh <thisis.adityarajsingh@gmail.com>"]
license = "MIT"
repository = "https://github.com/Adityarajsingh2904/RustChainCore"
description = "A clean, modular Bitcoin library in Rust by Aditya Raj Singh."
members = ["bitcoin", "hashes", "internals"]

[patch.crates-io.bitcoin_hashes]
path = "hashes"
