[package]
name = "bitcoin-private"
version = "0.1.0"
authors = ["Aditya Raj Singh <thisis.adityarajsingh@gmail.com>"]
license = "MIT"
repository = "https://github.com/Adityarajsingh2904/RustChainCore"
documentation = "https://docs.rs/bitcoin-private"
description = "A clean, modular Bitcoin library in Rust by Aditya Raj Singh."
categories = ["cryptography::cryptocurrencies"]
keywords = ["internal"]
readme = "README.md"
edition = "2018"
exclude = ["tests", "contrib"]

[features]
default = []
std = ["alloc"]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[dev-dependencies]
